<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp">

    <LinearLayout
        android:id="@+id/lt_txw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/media_img"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/news_image"
            android:src="@color/black"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txw_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Campeãs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/media_img"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="?attr/textAppearanceHeadline6"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txw_sec_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txw_title"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            tools:text="Brabas do Timão ganham seu primeiro Mundial de Clubes da FIFA" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/open_link"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/btn_abrir" />

            <ImageView
                android:id="@+id/img_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="@id/open_link"
                app:layout_constraintEnd_toStartOf="@id/img_share"
                app:layout_constraintTop_toTopOf="@id/open_link"
                android:src="@drawable/ic_favorites"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/favority_image" />
            <!--As 3 últimas linhas é para incluir efeito Ripple-->

            <ImageView
                android:id="@+id/img_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="@id/open_link"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/open_link"
                android:src="@drawable/ic_share"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/share_image" />
            <!--As 3 últimas linhas é para incluir efeito Ripple-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>